----------------------------------
SimpleMail Open Source - ChangeLog
----------------------------------

2004-01-14  Bernd Gollesch <bgollesch@sime.com>

	* amiga-mui/appicon.(c|h): Moved HideIcon creation form app_init() to
	  appicon_init(). Added the ToolTypes APPICON_POSX and APPICON_POSY
	  for positioning the AppIcon with wb.lib < V44.
	  The UnSnapshot function now also updates the display of the AppIcon.
	* amiga-mui/gui_main.c: Moved HideIcon to appicon.c
	* amiga-mui/mainwnd.c: Removed the AppIcon menuitems.
	* doc/amiga/SimpleMail.guide: Updated guide with AppIcon infos.
	* lists.c: Made some functions NULL pointer safe.

2004-01-13  Bernd Gollesch <bgollesch@sime.com>

	* doc/amiga/SimpleMail.guide: Added short description of AppIcon Label.
	* amiga-mui/binaries/(check|empty|new|old).info: New AppIcon Icons.
	* amiga-mui/appicon.(c|h): Added the code for appicon display. Now
	  Simplemail will display an AppIcon on the Workbench which will show
	  the current state of it. The Label can be changed in the configuration.
	  The position can be (Un)Snapshot with:
	  	workbenchlib < 3.5: Settings->(Un)Snapshot AppIcon
	  	workbenchlib >= 3.5: -- " -- and "Icon" menu from workbench.
	* amiga-mui/configwnd.c:  Small Layout/Code changes. Added the HelpNode
	  to each group, so the HELP Button will take you to the correct node
	  in the guide. Moved the SizeClass to configwnd_stuff.(c|h) so we can
	  compile without code=far. Added the AppIconLabel to the General group.
	* amiga-mui/configwnd_stuff.(c|h): Added the custom SizeClass.
	* amiga-mui/gui-main.c: Added the AppIcon stuff.
	* amiga-mui/mainwnd.c: Added the AppIcon menus.
	* amiga-mui/shutdownwnd.c: New checks if the text fits into the window.
	* amiga-mui/statuswnd.c, indep-include/statuswnd.h: New Function for
	  AppIcon statuscheck.
	* configuration.(c|h): Added the AppIconLabel to the configuration.
	* smakefile: Added the AppIcon Icons. Ignore the startup code for MorphOS.
